fixing blur bug on safari

--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -14,7 +14,7 @@ nav{
 .scrolled{
     border-bottom: solid .09vw var(--black);
     box-shadow: 0 0.05vw 0.5vw rgba(0, 0, 0, 0.05);
-    -webkit-backdrop-filter: blur(1px);
+    -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
 }
 
